Strategy manager changes
