# packages/server/src/controllers/exchangeController.ts
@@ -1,10 +1,10 @@
-import { AllowedExchangeIDs, Exchange, ExchangeID } from "@algotia/types";
+import { Exchange, ExchangeIDs } from "@algotia/types";
 import { Market } from "@algotia/ccxt";
 import { Controller, Get, Path, Query, Route } from "tsoa";
 import { ExchangeService } from "../services";
 
 type ExchangeStatuses = {
-    [key in ExchangeID]: boolean;
+    [key in ExchangeIDs]: boolean;
 };
 
 @Route("exchange")
@@ -12,33 +12,43 @@ export class ExchangeController extends Controller {
     exchangeService = new ExchangeService();
 
     @Get("ids")
-    public getExchangeIds(): string[] {
-        return [...AllowedExchangeIDs];
+    public getExchangeIds(): ExchangeIDs[] {
+        return Object.values(ExchangeIDs)
+            .map((k) => ExchangeIDs[k])
+            .filter((s) => !(parseInt(s) >= 0));
     }
 
     @Get("statuses")
     public async getExchangeStatuses(): Promise<ExchangeStatuses> {
         let statuses: ExchangeStatuses;
-        for (const id of AllowedExchangeIDs) {
-            const exchange = await this.exchangeService.getExchange(id);
-            let status: boolean;
-            try {
-                const statusRes = await exchange.fetchStatus();
-                status = statusRes.status === "ok";
-            } catch (err) {
-                status = false;
+
+        const exchangeIds = Object.values(ExchangeIDs)
+            .map((k) => ExchangeIDs[k])
+            .filter((s) => !(parseInt(s) >= 0));
+
+        for (const id of exchangeIds) {
+            if (isNaN(Number(id))) {
+                const exchange = await this.exchangeService.getExchange(id);
+                let status: boolean;
+                try {
+                    const statusRes = await exchange.fetchStatus();
+                    status = statusRes.status === "ok";
+                } catch (err) {
+                    status = false;
+                }
+                statuses = {
+                    ...statuses,
+                    [id]: status,
+                };
             }
-            statuses = {
-                ...statuses,
-                [id]: status,
-            };
         }
+
         return statuses;
     }
 
     @Get("{id}/market")
     public async getMarket(
-        @Path() id: ExchangeID,
+        @Path() id: ExchangeIDs,
         @Query() pair: string
     ): Promise<Market> {
         const exchange = await this.exchangeService.getExchange(id);
@@ -47,7 +57,7 @@ export class ExchangeController extends Controller {
 
     @Get("{id}/timeframes")
     public async getTimeFrames(
-        @Path() id: ExchangeID
+        @Path() id: ExchangeIDs
     ): Promise<Exchange["timeframes"]> {
         const exchange = await this.exchangeService.getExchange(id);
         return exchange.timeframes;
@@ -55,7 +65,7 @@ export class ExchangeController extends Controller {
 
     @Get("{id}/pairs")
     public async getPairs(
-        @Path() id: ExchangeID
+        @Path() id: ExchangeIDs
     ): Promise<Exchange["symbols"]> {
         const exchange = await this.exchangeService.getExchange(id);
         return exchange.symbols;
@@ -63,7 +73,7 @@ export class ExchangeController extends Controller {
 
     @Get("{id}/currencies")
     public async getCurrencies(
-        @Path() id: ExchangeID
+        @Path() id: ExchangeIDs
     ): Promise<Exchange["currencies"]> {
         const exchange = await this.exchangeService.getExchange(id);
         return exchange.currencies;
