# packages/server/src/utils/cache.ts
@@ -1,4 +1,4 @@
-import { Exchange, ExchangeID } from "@algotia/types";
+import { Exchange, ExchangeIDs } from "@algotia/types";
 import OPCache from "op-cache";
 
-export const exchangeCache = new OPCache<Record<ExchangeID, Exchange>>();
+export const exchangeCache = new OPCache<Record<ExchangeIDs, Exchange>>();
